--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "moment": "^2.24.0",
+    "mysql": "github:mysqljs/mysql",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.1",
     "pug": "^2.0.0-rc.1",
