--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.1",
     "pug": "^2.0.0-rc.1",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "wechat4u": "^0.7.7"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
